# openapi-struct-gen

./: Cargo.toml  README.md
src/: error.rs  generate.rs  lib.rs  parse.rs
tests/: example-schema.yaml  test.rs
