[package]
name = "openapi-struct-gen"
version = "0.1.0"
edition = "2021"
description = "Generate rust structures from an openapi 3.0 definition"
license = "Apache-2.0"
repository = "https://gitlab.com/amentis/openapi-struct-gen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = "1.0.1"
serde_json = "1.0.82"
serde_yaml = "0.9.2"
indexmap = "*"
heck = "0.4.0"
codegen = "0.1.3"
